<resources>
    <string name="app_name">TinkoffLeague</string>
    <string name="team_name">Team name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Название:</string>
    <string name="fullname">Полное название:</string>
    <string name="nicknames">Прозвища:</string>
    <string name="founded">Основан:</string>
    <string name="website">Сайт:</string>
    <string name="venue">Стадион</string>
    <string name="capacity">Вместимость:</string>
    <string name="staff">Персонал</string>
    <string name="gen_ditector">Ген. директор:</string>
    <string name="main_trainer">Г. Тренер:</string>
    <string name="captain">Капитан:</string>
    <string name="enemy_name">Enemy name</string>
    <string name="type_of_match">Type of match</string>
    <string name="date_of_match">Date of match</string>
    <string name="team">Команда</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tinkoff">Тинькофф лига</string>
    <string name="tinkoff_about">ФОРМАТ ТУРНИРА Российская Премьер-Лига проводится по принципу «каждый с каждым» в два круга, на своем поле и поле соперника. Команды Клубов, занявшие 15-е и 16-е места в итоговой турнирной таблице РПЛ, выбывают в ФНЛ после соблюдения процедуры выбывания Клубов из ПЛ. Команды, занявшие 13-е и 14-е места, играют по два переходных Матча (дома и в гостях) с командами – участниками Первенства ФНЛ, занявшими соответственно четвертое и третье места. Победителем переходных Матчей признаётся команда, которая забьёт большее количество голов в двух Матчах, а при равенстве забитых голов – команда, забившая большее количество голов на чужом поле. В случае, если команды забьют равное количество голов на своем и чужом поле, то после второго Матча назначаются два дополнительных тайма по 15 минут каждый, без перерыва. Если в течение дополнительного времени обе команды забьют равное количество голов, то победителем будет команда, играющая в этом Матче на чужом поле (в гостях). Если в течение дополнительного времени голы не будут забиты, то победитель будет определён с помощью ударов с 11-метровой отметки в соответствии с Правилами игры. Клубы, занявшие первое и второе места в турнирной таблице по итогам Первенства России по футболу среди команд клубов ФНЛ, а также победители переходных Матчей получают право выступать в следующем сезоне Российской Премьер-Лиги. Команды, проигравшие по итогам переходных Матчей текущего сезона, выступают в следующем сезоне в Первенстве России по футболу среди команд клубов ФНЛ. ОПРЕДЕЛЕНИЕ МЕСТ КОМАНД Места команд в турнирной таблице в ходе Чемпионата и по его итогам определяются по сумме очков, набранных во всех сыгранных Матчах. За победу в Матче начисляются три очка, за ничью - одно очко, за поражение очки не начисляются. Команда, набравшая большее количество очков, располагается в текущей и итоговой турнирной таблице выше команды, набравшей меньшее количество очков. В случае равенства очков у двух и более команд места команд в таблице Чемпионата определяются: - по результатам игр между собой (число очков, количество побед, разность забитых и пропущенных мячей, число забитых мячей); - по наибольшему числу побед во всех Матчах; - по лучшей разности забитых и пропущенных мячей во всех Матчах; - по наибольшему числу забитых мячей во всех Матчах; При абсолютном равенстве всех указанных показателей места команд в итоговой турнирной таблице определяются в дополнительном Матче (турнире) между этими командами. Время, место и условия проведения этого Матча (турнира) определяются Руководством ПЛ с учётом мнений Клубов - участников Матча (турнира). В случае равенства очков у двух и более команд места команд в текущей турнирной таблице определяются в соответствии с показателями, перечисленными выше. При абсолютном равенстве всех указанных показателей места команд в текущей турнирной таблице определяются в соответствии с п.4.6 Регламента Премьер-Лиги. Санкции в виде жёлтых карточек, полученных в ходе Чемпионата, при проведении дополнительного Матча (турнира) не учитываются. На дополнительный Матч (турнир) переносятся только дисквалификации, назначенные в ходе Чемпионата. До начала Чемпионата РФС информирует ПЛ о местах в таблице, занятие которых по итогам Чемпионата дает право Клубу на участие в клубных соревнованиях УЕФА.</string>
</resources>