<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/fixturesImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_sports_soccer_24" />

    <TextView
        android:id="@+id/fixturesEnemy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/enemy_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fixturesImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fixturesType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/type_of_match"
        android:textColor="@color/darkGrey"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/fixturesImage"
        app:layout_constraintTop_toBottomOf="@+id/fixturesEnemy" />

    <TextView
        android:id="@+id/fixturesDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/date_of_match"
        android:textColor="@color/darkGrey"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/fixturesImage"
        app:layout_constraintTop_toBottomOf="@+id/fixturesType" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>