<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@color/transparent_25">

        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_sports_soccer_24" />

        <TextView
            android:id="@+id/resultEnemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/enemy_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/resultImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/type_of_match"
            android:textColor="@color/lightWhite"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/resultResult"
            app:layout_constraintStart_toEndOf="@+id/resultImage"
            app:layout_constraintTop_toBottomOf="@+id/resultEnemy" />

        <TextView
            android:id="@+id/resultDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/date_of_match"
            android:textColor="@color/lightWhite"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/resultImage"
            app:layout_constraintTop_toBottomOf="@+id/resultType" />

        <TextView
            android:id="@+id/resultResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="0 - 0"
            android:textColor="@color/lightWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>